Pass a Host API struct from the host program to the library
After this redesign, there are now two types for communication:

 * State is isolated to the reloadable library, the main program knows nothing
   about it except for its size so that it can keep it allocated. This lets you
   change the contents of the State struct without restarting the whole program.
   This is intended to handle the state of the game world, independent of the
   host program.

 * Host is defined by the host program and the layout is visible to both sides
   of the bridge. This means that it has to remain the same during a run of the
   game engine. This should hold resources that can only be produced by the host
   program, and function pointers to services that can only be provided by the
   host program. (Anything that requires global state like system allocators,
   graphics contexts, input handling, etc etc.)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "live-reload"
-version = "0.1.0"
+version = "0.2.0"
 authors = ["Caleb Jones <code@calebjones.net>"]
 description = "A library to help with live-reloading game development"
 license = "Zlib"
@@ -10,3 +10,6 @@ repository = "https://github.com/porglezomp-misc/live-reloading-rs"
 [dependencies]
 libloading = "0.4"
 notify = "4.0"
+
+[workspace]
+members = ["demo"]
