--- a/demo/Cargo.toml
+++ b/demo/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
 name = "reload-demo"
-version = "0.1.0"
+version = "0.2.0"
 authors = ["Caleb Jones <code@calebjones.net>"]
 
 [lib]
-name = "reloadapp"
+name = "reloadable"
 crate-type = ["cdylib"]
 
 [dependencies]
-live-reload = { version="0.1", path=".." }
+live-reload = { version="0.2", path=".." }
